tests/diagnostics/expressions/comparisons/operand_not_int64/expect.txt
# exit: 1
input/main.lang0:2:12: error: comparison operators require int64 operands
      return 1 < true
             ^
